--- a/midterm/index.html
+++ b/midterm/index.html
@@ -1,1 +1,9 @@
-
+<a href= "https://github.com/40628423/vecp2018-23/blob/gh-pages/midterm(%E6%A0%A1%E5%BE%BD)" >校徽.lua</a>
+<br/>
+<img src="https://upload.cc/i1/2018/04/28/YMCf5P.jpg" width="400" height="300"></img>
+<br/>先劃一個六角形為藍，在劃一個內六角形顏色為白，在畫小圓顏色為藍，在畫白線。
+<br/>
+<a href= "https://github.com/40628423/vecp2018-23/blob/gh-pages/midterm(%E7%BE%8E%E5%9C%8B%E5%9C%8B%E6%97%97)" >flag.lua</a>
+<br/>
+<img src ="https://upload.cc/i1/2018/04/28/UJNro2.png" width="400" height="300"></img>
+<br/>先劃出滿地紅，再畫出青天，接下來畫白線在滿地紅上，然後繪製星星在青天上。
