--- a/midterm/index.html
+++ b/midterm/index.html
@@ -7,3 +7,5 @@
 <br/>
 <img src ="https://upload.cc/i1/2018/04/28/UJNro2.png" width="400" height="300"></img>
 <br/>先劃出滿地紅，再畫出青天，接下來畫白線在滿地紅上，然後繪製星星在青天上。
+<a href= "https://github.com/40628423/vecp2018-23/blob/gh-pages/%E7%A8%8B%E5%BC%8F%E8%A8%BB%E8%A7%A3" >程式註解</a>
+<br/>
